--- a/src/style/Overview.module.css
+++ b/src/style/Overview.module.css
@@ -2,7 +2,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     width: 100%;
     height: 400px;
     margin-top: 2vw;
@@ -11,4 +10,11 @@
 .text {
     font-family: Poppins;
     font-size: 3vw;
+}
+
+.card {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    font-family: Poppins;
 }
