modified:   src/Components/Routers/Overview_module/Overview.tsx 	modified:   src/Components/Routers/Overview_module/Pathln.tsx 	modified:   src/Components/Routers/Page2.tsx 	new file:   src/assets/images/CardImage-4.webp 	modified:   src/assets/images/IndexImage.ts 	modified:   src/style/map.css

--- a/src/style/map.css
+++ b/src/style/map.css
@@ -5,6 +5,7 @@
 .map-container-page5,
 .map-container-page6 {
     /* width: 100.3%; */
+    width: 100%;
     height: 100vh;
     overflow: hidden;
 }
