--- a/src/pages/services/overview/index.css
+++ b/src/pages/services/overview/index.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .container {
     display: flex;
     align-items: center;
@@ -9,7 +15,7 @@
 
 .text {
     font-family: Poppins;
-    font-size: 3vw;
+    font-size: 0.85rem;
 }
 
 .card {
