modified:   .eslintrc.cjs 	modified:   index.html 	modified:   package.json 	renamed:    src/assets/data/AnimatedLineChart.json -> public/animatedLineChart.json 	renamed:    src/assets/data/ThumbnailAxisStacked_data.json -> public/thumbnailAxisStacked_data.json 	renamed:    src/App.jsx -> src/App.tsx 	new file:   "src/assets/images/NDVI\345\217\230\345\214\226\350\266\213\345\212\277(NDVI\347\272\277\346\200\247\346\213\237\345\220\210\346\226\234\347\216\207)_tight.png" 	modified:   src/assets/images/images.ts 	new file:   "src/assets/images/\346\200\273\344\275\223NDVI\345\217\230\345\214\226\350\266\213\345\212\277(\345\214\272\345\237\237\345\271\263\345\235\207NDVI\346\212\230\347\272\277\344\270\216\345\205\266\347\272\277\346\200\247\346\213\237\345\220\210).svg" 	deleted:    "src/assets/other/\351\223\266\346\262\263.json" 	deleted:    "src/assets/other/\351\223\266\346\262\263/assets/fonts/info.json" 	deleted:    "src/assets/other/\351\223\266\346\262\263/assets/images/info.json" 	deleted:    "src/assets/other/\351\223\266\346\262\263/assets/images/spark.jpg" 	deleted:    "src/assets/other/\351\223\266\346\262\263/assets/models/info.json" 	deleted:    "src/assets/other/\351\223\266\346\262\263/assets/spines/info.json" 	deleted:    "src/assets/other/\351\223\266\346\262\263/cover.png" 	deleted:    "src/assets/other/\351\223\266\346\262\263/project.json" 	deleted:    "src/assets/other/\351\223\266\346\262\263/scene.json" 	renamed:    src/main.jsx -> src/main.tsx 	modified:   src/pages/home/content.tsx 	modified:   src/pages/services/christmas/index.css 	modified:   src/pages/services/christmas/index.tsx 	modified:   src/pages/services/ndvi-temp/map-container.tsx 	modified:   src/pages/services/overview/area.tsx 	modified:   src/pages/services/overview/card-component.tsx 	modified:   src/pages/services/overview/index.tsx 	modified:   src/pages/services/rs-imagery/rs-imagery.tsx 	modified:   src/pages/services/services.tsx 	renamed:    src/pages/services/ndvi-t

--- a/src/pages/services/christmas/index.css
+++ b/src/pages/services/christmas/index.css
@@ -49,7 +49,6 @@
 
 #bg,
 #bg_mask {
-    /* ふちボケ対策 */
     position: absolute;
     top: 0;
     right: 0;
@@ -90,4 +89,13 @@
 
 #bg_mask {
     mask-size: var(--size), 0;
+}
+
+.spotlight-container main {
+    position: relative;
+    color: crimson;
+    mix-blend-mode: color-burn;
+    z-index: 0;
+    margin-top: 200px;
+    /* Add this line */
 }
