modified:   index.html 	modified:   src/App.tsx 	modified:   src/assets/icons/icons.js 	new file:   src/assets/icons/ol.svg 	deleted:    src/assets/styles/LST.sld 	modified:   src/assets/styles/index.css 	modified:   src/components/floatbutton.tsx 	modified:   src/components/tour.tsx 	modified:   src/pages/home/content.tsx 	modified:   src/pages/home/header.tsx 	modified:   src/pages/home/homepage.tsx 	modified:   src/pages/home/index.css 	modified:   src/pages/services/introduction/introduction.tsx 	modified:   src/pages/services/ndvi-temp/index.tsx 	modified:   src/pages/services/overview/honeycomb-heat-map.tsx 	modified:   src/pages/services/overview/index.css 	modified:   src/pages/services/rs-imagery/rs-imagery.tsx 	modified:   src/pages/services/search-input.css 	modified:   src/pages/services/services.tsx 	modified:   src/pages/services/swipe/swipe.tsx 	modified:   src/pages/services/xylophilus/index.css 	modified:   src/pages/services/xylophilus/xylophilus.tsx 	modified:   vercel.json

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-
 :root {
-  font-family: 'Poppins', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  color:#f0f0f0;
+  letter-spacing: 0.1rem;
 
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
