modified:   src/components/tour.css 	modified:   src/components/tour.tsx 	modified:   src/pages/home/content.tsx 	modified:   src/pages/home/footer.tsx 	modified:   src/pages/home/header.tsx 	modified:   src/pages/home/homepage.tsx 	modified:   src/pages/home/index.css 	modified:   src/pages/services/ndvi-temp/index.tsx 	modified:   src/pages/services/ndvi-temp/map-selector.tsx 	modified:   src/pages/services/overview/card-component.tsx 	modified:   src/pages/services/overview/index.css 	modified:   src/pages/services/overview/index.tsx 	modified:   src/pages/services/overview/mini-area.tsx 	modified:   src/pages/services/overview/pathln.tsx 	modified:   src/pages/services/rs-imagery/rs-imagery.tsx 	modified:   src/pages/services/search-input.css 	modified:   src/pages/services/services.tsx 	modified:   src/pages/services/swipe/swipe.tsx 	modified:   src/pages/services/xylophilus/index.css 	modified:   src/pages/services/xylophilus/xylophilus.tsx

--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -9,7 +9,8 @@
     background: transparent;
     padding: 0;
     margin-top: 3vh;
-    font-size: 1vw;
+    margin-left: 1.5vw;
+    font-size: 1.1vw;
     font-family: Poppins, Arial, sans-serif;
     width: 12vw;
     height: 3.2vh;
@@ -97,5 +98,5 @@ button.learn-more .button-text {
 }
 
 .button-text {
-    letter-spacing: 0.3rem;
+    letter-spacing: 0.3vw;
 }
