--- a/src/pages/services/xylophilus/index.css
+++ b/src/pages/services/xylophilus/index.css
@@ -2,7 +2,7 @@
 .radio-buttons-container {
     display: flex;
     align-items: center;
-    gap: 1.8rem;
+    gap: 1.8vw;
 }
 
 .radio-button {
@@ -20,10 +20,10 @@
 
 .radio-button__label {
     display: inline-block;
-    padding-left: 2rem;
-    margin-bottom: 1rem;
+    padding-left: 2vw;
+    margin-bottom: 1vw;
     position: relative;
-    font-size: 1.1rem;
+    font-size: 1.1vw;
     color: #000;
     cursor: pointer;
     transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
@@ -34,16 +34,16 @@
     top: 50%;
     left: 0;
     transform: translateY(-50%);
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1.2vw;
+    height: 1.2vw;
     border-radius: 50%;
-    border: 0.13rem solid #555;
+    border: 0.13vw solid #555;
     transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .radio-button__input:checked+.radio-button__label .radio-button__custom {
     transform: translateY(-50%) scale(0.95);
-    border: 0.3rem solid #52c41a;
+    border: 0.3vw solid #52c41a;
     color: #52c41a;
 }
 
@@ -54,6 +54,6 @@
 .radio-button__label:hover .radio-button__custom {
     transform: translateY(-50%) scale(1.2);
     border-color: #52c41a;
-    box-shadow: 0 0 1rem #52c41a;
+    box-shadow: 0 0 1vw #52c41a;
 }
 
