--- a/src/pages/services/overview/index.css
+++ b/src/pages/services/overview/index.css
@@ -14,12 +14,12 @@
 }
 
 .text {
-    font-size: 0.85rem;
+    font-size: 0.85vw;
 }
 
 .card {
     display: block;
     align-items: center;
     justify-content: center;
-    height: 19rem;
+    height: 19vw;
 }
